--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     Conecte seu negócio ao futuro com a ACPTelecom
                 </h2>
                 <p class="text-lg md:text-xl mb-10 max-w-2xl mx-auto text-gray-200">
-                    Soluções personalizadas em engenharia de telecomunicações, VoIP e infraestrutura de redes com 18 anos de expertise.
+                    Soluções personalizadas em engenharia de telecomunicações e infraestrutura de TIC com 19 anos de experiência.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center gap-4">
                     <a href="#servicos" class="bg-white text-gray-900 font-bold py-3 px-10 rounded-full shadow-xl hover:bg-gray-100 transition transform hover:scale-105">Nossos Serviços</a>
@@ -100,12 +100,12 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="p-8 bg-gray-50 rounded-2xl border border-gray-100 hover:shadow-2xl transition">
                         <div class="service-icon">📞</div>
-                        <h4 class="text-xl font-bold mb-3">Consultoria e VoIP</h4>
+                        <h4 class="text-xl font-bold mb-3">Consultoria em Soluções VoIP</h4>
                         <p class="text-gray-600 text-sm">Projetos de telefonia IP para redução de custos e mobilidade total para sua equipe.</p>
                     </div>
                     <div class="p-8 bg-gray-50 rounded-2xl border border-gray-100 hover:shadow-2xl transition">
                         <div class="service-icon">📡</div>
-                        <h4 class="text-xl font-bold mb-3">Redes Wireless e Fibra</h4>
+                        <h4 class="text-xl font-bold mb-3">Redes Wireless e Fibra Óptica</h4>
                         <p class="text-gray-600 text-sm">Design de infraestrutura para alta densidade e cobertura estável em ambientes críticos.</p>
                     </div>
                     <div class="p-8 bg-gray-50 rounded-2xl border border-gray-100 hover:shadow-2xl transition">
@@ -122,7 +122,7 @@
                 <div class="flex flex-col md:flex-row items-center gap-12">
                     <div class="md:w-1/2">
                         <h3 class="text-3xl font-bold mb-6">Alan Queiroz da Silva</h3>
-                        <p class="text-gray-400 mb-4 leading-relaxed">Engenheiro de Telecomunicações (CREA/PA: 14.414 – D) formado pelo IESAM, com especializações em Segurança da Informação e Sistemas de Telecom.</p>
+                        <p class="text-gray-400 mb-4 leading-relaxed">Engenheiro de Telecomunicações (CREA/PA: 14.414 – D), com especializações em Segurança da Informação e Sistemas de Telecom.</p>
                         <p class="text-gray-400 mb-6">Com quase duas décadas de atuação, Alan une o conhecimento técnico profundo com a visão estratégica necessária para projetos de larga escala no setor público e privado.</p>
                         <a href="http://lattes.cnpq.br/7450522116006863" target="_blank" class="inline-block border-2 border-white px-6 py-2 rounded-lg hover:bg-white hover:text-gray-900 transition font-semibold">Ver Currículo Lattes</a>
                     </div>
@@ -181,7 +181,7 @@
             <img src="Nova Logo ACPTelecom.jpg" alt="Logo ACPTelecom" class="header-logo mx-auto mb-6 grayscale opacity-50 hover:grayscale-0 transition">
             <p class="mb-2">ACPTelecom - Consultoria e Assessoria em Telecomunicações</p>
             <p class="text-sm">alanqsilva@gmail.com | (68) 98114-5306</p>
-            <p class="text-xs mt-8">© 2024 ACPTelecom. Rio Branco - AC.</p>
+            <p class="text-xs mt-8">© 2026 ACPTelecom. Rio Branco - AC.</p>
         </div>
     </footer>
 </body>
