--- a/index.html
+++ b/index.html
@@ -3,186 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACPTelecom - Alan Queiroz da Silva: Consultoria e Projetos em Telecomunicações</title>
+    <title>ACPTelecom | Engenharia e Consultoria Regulatória Anatel</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            scroll-behavior: smooth;
-            background-color: #f8f8f8;
-        }
-        /* Banner Principal com a Imagem de IA */
-        .hero-banner {
-            background-color: #111827;
-            color: white;
-            padding: 10rem 0;
-            text-align: center;
-            position: relative;
-            overflow: hidden;
-        }
-        .hero-banner::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            /* SUA IMAGEM DE IA ABAIXO */
-            background-image: url('Gemini_Imagem_IA_Site_APCTelecom.png');
-            background-size: cover;
-            background-position: center;
-            opacity: 0.35;
-            z-index: 0;
-        }
-        .hero-banner .container {
-            position: relative;
-            z-index: 1;
-        }
-        .header-logo {
-            max-height: 55px;
-            width: auto;
-        }
-        .service-icon {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        .animate-fade-in {
-            animation: fadeIn 1s ease-out;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <header class="bg-gray-900 shadow-lg sticky top-0 z-50 py-3">
-        <div class="container mx-auto flex flex-wrap justify-between items-center px-4">
+<body class="bg-[#0a0a0a] text-white">
+
+    <header class="fixed w-full z-50 bg-black/80 backdrop-blur-md border-b border-white/10 py-4">
+        <div class="container mx-auto flex justify-between items-center px-6">
             <div class="flex items-center">
-                <img src="Nova Logo ACPTelecom.jpg" alt="Logo ACPTelecom" class="header-logo rounded-md shadow-sm">
-                <div class="ml-4 hidden sm:block">
-                    <h1 class="text-xl font-bold text-white leading-tight">ACPTelecom</h1>
-                    <p class="text-xs text-gray-400">Engenharia e Consultoria</p>
-                </div>
+                <img src="assets/logo-acp.png" alt="ACPTelecom" class="h-12 mr-4">
             </div>
-            <nav>
-                <ul class="flex space-x-4 md:space-x-6 text-sm md:text-base">
-                    <li><a href="#inicio" class="text-gray-300 hover:text-white transition">Início</a></li>
-                    <li><a href="#servicos" class="text-gray-300 hover:text-white transition">Serviços</a></li>
-                    <li><a href="#sobre" class="text-gray-300 hover:text-white transition">Sobre</a></li>
-                    <li><a href="#contato" class="bg-blue-600 px-4 py-2 rounded-md text-white hover:bg-blue-700 transition">Contato</a></li>
+            <nav class="hidden md:block">
+                <ul class="flex space-x-8 text-xs font-medium tracking-widest uppercase">
+                    <li><a href="#inicio" class="hover:text-cyan-400 transition">Início</a></li>
+                    <li><a href="#servicos" class="hover:text-cyan-400 transition">Serviços</a></li>
+                    <li><a href="#sobre" class="hover:text-cyan-400 transition">O Engenheiro</a></li>
+                    <li><a href="#contato" class="bg-cyan-600 px-5 py-2 rounded-sm hover:bg-cyan-500 transition text-white">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <main>
-        <section id="inicio" class="hero-banner animate-fade-in">
-            <div class="container mx-auto px-4">
-                <h2 class="text-4xl md:text-6xl font-extrabold mb-6 leading-tight max-w-4xl mx-auto">
-                    Conecte seu negócio ao futuro com a ACPTelecom
-                </h2>
-                <p class="text-lg md:text-xl mb-10 max-w-2xl mx-auto text-gray-200">
-                    Soluções personalizadas em engenharia de telecomunicações e infraestrutura de TIC com 19 anos de experiência.
-                </p>
-                <div class="flex flex-col sm:flex-row justify-center gap-4">
-                    <a href="#servicos" class="bg-white text-gray-900 font-bold py-3 px-10 rounded-full shadow-xl hover:bg-gray-100 transition transform hover:scale-105">Nossos Serviços</a>
-                    <a href="https://wa.me/5568981145306" target="_blank" class="bg-green-600 text-white font-bold py-3 px-10 rounded-full shadow-xl hover:bg-green-700 transition transform hover:scale-105">WhatsApp</a>
-                </div>
+    <section id="inicio" class="hero-section relative overflow-hidden">
+        <div class="container mx-auto px-6 z-10">
+            <h1 class="text-4xl md:text-6xl font-bold mb-6 gradient-text">CONECTANDO TECNOLOGIA <br>E REGULAMENTAÇÃO.</h1>
+            <p class="text-lg md:text-xl text-gray-400 max-w-2xl mb-8 leading-relaxed">
+                Projetos de infraestrutura TIC e consultoria especializada para outorgas Anatel (SCM, STFC, SeAC). 
+                Expertise técnica com acesso pleno aos sistemas <strong>Mosaico e SEI</strong>.
+            </p>
+            <div class="flex flex-col sm:flex-row gap-4">
+                <a href="#servicos" class="px-8 py-4 bg-white text-black font-bold uppercase tracking-tighter hover:bg-cyan-400 transition text-center">Nossos Serviços</a>
+                <a href="https://wa.me/5568981145306" target="_blank" class="px-8 py-4 border border-white/30 font-bold uppercase tracking-tighter hover:bg-white/10 transition text-center">WhatsApp Consultoria</a>
             </div>
-        </section>
-
-        <section id="servicos" class="py-20 bg-white">
-            <div class="container mx-auto px-4 text-center">
-                <h3 class="text-3xl font-bold text-gray-800 mb-4">Soluções Especializadas</h3>
-                <div class="w-20 h-1 bg-blue-600 mx-auto mb-12"></div>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <div class="p-8 bg-gray-50 rounded-2xl border border-gray-100 hover:shadow-2xl transition">
-                        <div class="service-icon">📞</div>
-                        <h4 class="text-xl font-bold mb-3">Consultoria em Soluções VoIP</h4>
-                        <p class="text-gray-600 text-sm">Projetos de telefonia IP para redução de custos e mobilidade total para sua equipe.</p>
-                    </div>
-                    <div class="p-8 bg-gray-50 rounded-2xl border border-gray-100 hover:shadow-2xl transition">
-                        <div class="service-icon">📡</div>
-                        <h4 class="text-xl font-bold mb-3">Redes Wireless e Fibra Óptica</h4>
-                        <p class="text-gray-600 text-sm">Design de infraestrutura para alta densidade e cobertura estável em ambientes críticos.</p>
-                    </div>
-                    <div class="p-8 bg-gray-50 rounded-2xl border border-gray-100 hover:shadow-2xl transition">
-                        <div class="service-icon">💻</div>
-                        <h4 class="text-xl font-bold mb-3">Segurança e Suporte</h4>
-                        <p class="text-gray-600 text-sm">Manutenção preventiva, suporte a servidores e implementação de segurança da informação.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="sobre" class="py-20 bg-gray-900 text-white">
-            <div class="container mx-auto px-4">
-                <div class="flex flex-col md:flex-row items-center gap-12">
-                    <div class="md:w-1/2">
-                        <h3 class="text-3xl font-bold mb-6">Alan Queiroz da Silva</h3>
-                        <p class="text-gray-400 mb-4 leading-relaxed">Engenheiro de Telecomunicações (CREA/PA: 14.414 – D), com especializações em Segurança da Informação e Sistemas de Telecom.</p>
-                        <p class="text-gray-400 mb-6">Com quase duas décadas de atuação, Alan une o conhecimento técnico profundo com a visão estratégica necessária para projetos de larga escala no setor público e privado.</p>
-                        <a href="http://lattes.cnpq.br/7450522116006863" target="_blank" class="inline-block border-2 border-white px-6 py-2 rounded-lg hover:bg-white hover:text-gray-900 transition font-semibold">Ver Currículo Lattes</a>
-                    </div>
-                    <div class="md:w-1/2 grid grid-cols-2 gap-4">
-                        <div class="bg-gray-800 p-6 rounded-xl text-center">
-                            <span class="text-3xl font-bold text-blue-400">18+</span>
-                            <p class="text-xs uppercase mt-2 tracking-widest text-gray-500">Anos de Experiência</p>
-                        </div>
-                        <div class="bg-gray-800 p-6 rounded-xl text-center">
-                            <span class="text-3xl font-bold text-blue-400">CREA</span>
-                            <p class="text-xs uppercase mt-2 tracking-widest text-gray-500">Engenheiro Registrado</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="contato" class="py-20 bg-gray-50">
-            <div class="container mx-auto px-4">
-                <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
-                    <div class="bg-white p-10 rounded-3xl shadow-lg border border-gray-100">
-                        <h3 class="text-2xl font-bold mb-6">Envie sua demanda</h3>
-                        <form action="https://formspree.io/f/alanqsilva@gmail.com" method="POST">
-                            <div class="grid grid-cols-1 gap-4 mb-4">
-                                <input type="text" name="name" placeholder="Seu Nome" class="w-full p-3 rounded-lg border bg-gray-50 outline-none focus:border-blue-500 transition" required>
-                                <input type="email" name="email" placeholder="Seu E-mail" class="w-full p-3 rounded-lg border bg-gray-50 outline-none focus:border-blue-500 transition" required>
-                            </div>
-                            <textarea name="message" rows="4" placeholder="Como podemos ajudar seu projeto?" class="w-full p-3 rounded-lg border bg-gray-50 outline-none focus:border-blue-500 transition mb-4"></textarea>
-                            <button type="submit" class="w-full bg-gray-900 text-white font-bold py-4 rounded-lg hover:bg-black transition">Enviar Mensagem</button>
-                        </form>
-                        <div class="mt-8 pt-8 border-t">
-                            <p class="text-gray-600"><strong>Telefone:</strong> (68) 98114-5306</p>
-                            <p class="text-gray-600"><strong>E-mail:</strong> alanqsilva@gmail.com</p>
-                            <p class="text-gray-600"><strong>Endereço:</strong> Rio Branco - AC</p>
-                        </div>
-                    </div>
-
-                    <div class="rounded-3xl shadow-lg overflow-hidden border-4 border-white h-[450px] lg:h-auto">
-                        <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.5446738914614!2d-67.828292!3d-9.971775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x917f097561f5583b%3A0x6b77c5f87b322a46!2sRua%20Tiradentes%2C%20158%20-%20Vilage%20Tiradentes%2C%20Rio%20Branco%20-%20AC%2C%2069914-090!5e0!3m2!1spt-BR!2sbr!4v1710000000000!5m2!1spt-BR!2sbr" 
-                            width="100%" 
-                            height="100%" 
-                            style="border:0;" 
-                            allowfullscreen="" 
-                            loading="lazy" 
-                            referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="bg-gray-900 text-gray-400 py-12">
-        <div class="container mx-auto px-4 text-center">
-            <img src="Nova Logo ACPTelecom.jpg" alt="Logo ACPTelecom" class="header-logo mx-auto mb-6 grayscale opacity-50 hover:grayscale-0 transition">
-            <p class="mb-2">ACPTelecom - Consultoria e Assessoria em Telecomunicações</p>
-            <p class="text-sm">alanqsilva@gmail.com | (68) 98114-5306</p>
-            <p class="text-xs mt-8">© 2026 ACPTelecom. Rio Branco - AC.</p>
         </div>
+    </section>
+
+    <section id="servicos" class="py-24 bg-[#0a0a0a]">
+        <div class="container mx-auto px-6 text-center">
+            <h2 class="text-3xl font-bold mb-4 tracking-widest uppercase">Soluções de Engenharia</h2>
+            <div class="w-24 h-1 bg-cyan-600 mx-auto mb-16"></div>
+            
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-left">
+                <div class="glass-card p-8 rounded-lg border border-white/5 hover:border-cyan-500/50 transition">
+                    <div class="text-cyan-400 mb-6 text-4xl">📡</div>
+                    <h3 class="text-xl font-bold mb-4">Infraestrutura e TIC</h3>
+                    <p class="text-gray-400 text-sm leading-relaxed">
+                        Projetos de redes ópticas (FTTH), cabeamento estruturado e infraestrutura técnica para operadoras e ISPs.
+                    </p>
+                </div>
+
+                <div class="glass-card p-8 rounded-lg border border-white/5 hover:border-cyan-500/50 transition">
+                    <div class="text-cyan-400 mb-6 text-4xl">⚖️</div>
+                    <h3 class="text-xl font-bold mb-4">Outorgas e Pós-Outorga</h3>
+                    <p class="text-gray-400 text-sm leading-relaxed">
+                        Licenciamento SCM, STFC e SeAC. Gestão de obrigações regulatórias e envio de coletas de dados via sistema Mosaico.
+                    </p>
+                </div>
+
+                <div class="glass-card p-8 rounded-lg border border-white/5 hover:border-cyan-500/50 transition">
+                    <div class="text-cyan-400 mb-6 text-4xl">🚁</div>
+                    <h3 class="text-xl font-bold mb-4">RF e Drones</h3>
+                    <p class="text-gray-400 text-sm leading-relaxed">
+                        Homologação de drones e equipamentos de radiofrequência na Anatel. Projetos técnicos com responsabilidade de Engenheiro Especialista.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="sobre" class="py-24 bg-zinc-950">
+        <div class="container mx-auto px-6 flex flex-col md:flex-row items-center gap-12">
+            <div class="md:w-1/2">
+                <h2 class="text-3xl font-bold mb-6">ALAN QUEIROZ DA SILVA</h2>
+                <p class="text-gray-400 mb-4 text-lg">
+                    Engenheiro de Telecomunicações registrado no <strong>CREA/PA: 14.414 – D</strong>. 
+                </p>
+                <p class="text-gray-400 mb-6 leading-relaxed">
+                    Com 19 anos de experiência, atuo na interface entre a engenharia de infraestrutura e o complexo cenário regulatório brasileiro, garantindo segurança jurídica para o seu negócio de telecomunicações.
+                </p>
+                <a href="http://lattes.cnpq.br/7450522116006863" target="_blank" class="inline-block border border-cyan-500 text-cyan-500 px-6 py-2 hover:bg-cyan-500 hover:text-white transition uppercase font-bold text-xs tracking-widest">Currículo Lattes</a>
+            </div>
+            <div class="md:w-1/2 grid grid-cols-2 gap-4">
+                <div class="bg-black/40 p-10 rounded-lg text-center border border-white/5">
+                    <div class="text-4xl font-bold text-white mb-2">19+</div>
+                    <div class="text-[10px] uppercase text-gray-500 tracking-widest">Anos de Experiência</div>
+                </div>
+                <div class="bg-black/40 p-10 rounded-lg text-center border border-white/5">
+                    <div class="text-4xl font-bold text-white mb-2">SEI</div>
+                    <div class="text-[10px] uppercase text-gray-500 tracking-widest">Acesso Anatel</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer id="contato" class="py-12 bg-black border-t border-white/5 text-center">
+        <img src="assets/logo-acp.png" alt="ACPTelecom" class="h-8 mx-auto mb-6 opacity-60">
+        <p class="text-gray-500 text-sm mb-4">alanqsilva@gmail.com | (68) 98114-5306</p>
+        <p class="text-[10px] text-gray-700 uppercase tracking-widest">© 2026 ACPTelecom Engenharia. Rio Branco - AC.</p>
     </footer>
+
 </body>
 </html>
