--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <footer id="contato" class="py-12 bg-black border-t border-white/5 text-center">
         <img src="assets/logo-acp.png" alt="ACPTelecom" class="h-8 mx-auto mb-6 opacity-60">
         <p class="text-gray-500 text-sm mb-4">alanqsilva@gmail.com | (68) 98114-5306</p>
-        <p class="text-[10px] text-gray-700 uppercase tracking-widest">© 2026 ACPTelecom Engenharia. Rio Branco - AC.</p>
+        <p class="text-[10px] text-gray-700 uppercase tracking-widest">© 2026 ACPTelecom Consultoria e Projetos de Telecomunicações. Rio Branco - AC.</p>
     </footer>
 
 </body>
