--- a/index.html
+++ b/index.html
@@ -3,105 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACPTelecom | Alan Consultoria e Projetos em Telecomunicações</title>
+    
+    <title>ACPTelecom | Engenheiro Alan Queiroz | Rio Branco - AC</title>
+    <meta name="description" content="Engenheiro de Telecomunicações Alan Queiroz da Silva (CREA/PA). Projetos de Redes Ópticas, Wireless, VoIP, Outorgas Anatel e Homologação de Drones em Rio Branco, Acre.">
+    <meta name="keywords" content="Engenheiro Telecomunicações Rio Branco, ACPTelecom, Alan Queiroz da Silva, Projetos de Rede Óptica, Consultoria Anatel Acre, Outorga SCM, Homologação de Drones, SCM Anatel">
+    <link rel="canonical" href="https://www.acptelecom.eng.br/">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfessionalService",
+      "name": "ACPTelecom - Alan Consultoria e Projetos de Telecomunicações",
+      "image": "https://www.acptelecom.eng.br/assets/logo-acp.png",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Rua Tiradentes, 158, Vilage Tiradentes",
+        "addressLocality": "Rio Branco",
+        "addressRegion": "AC",
+        "postalCode": "69914-090",
+        "addressCountry": "BR"
+      },
+      "url": "https://www.acptelecom.eng.br",
+      "telephone": "+5568981145306",
+      "knowsAbout": ["Telecomunicações", "Fibra Óptica", "Anatel", "Drones", "TIC"]
+    }
+    </script>
+
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="bg-[#0a0a0a] text-white">
+<body class="bg-white text-slate-800">
 
-    <header class="fixed w-full z-50 bg-black/80 backdrop-blur-md border-b border-white/10 py-4">
+    <header class="fixed w-full z-50 bg-white/95 backdrop-blur-md border-b border-slate-200 py-2">
         <div class="container mx-auto flex justify-between items-center px-6">
-            <div class="flex items-center">
-                <img src="assets/logo-acp.png" alt="ACPTelecom" class="h-12 mr-4">
-            </div>
-            <nav class="hidden md:block">
-                <ul class="flex space-x-8 text-xs font-medium tracking-widest uppercase">
-                    <li><a href="#inicio" class="hover:text-cyan-400 transition">Início</a></li>
-                    <li><a href="#servicos" class="hover:text-cyan-400 transition">Serviços</a></li>
-                    <li><a href="#sobre" class="hover:text-cyan-400 transition">O Engenheiro</a></li>
-                    <li><a href="#contato" class="bg-cyan-600 px-5 py-2 rounded-sm hover:bg-cyan-500 transition text-white">Contato</a></li>
+            <img src="assets/logo-acp.png" alt="ACPTelecom" class="h-16 md:h-20">
+            <nav class="hidden lg:block">
+                <ul class="flex space-x-8 text-sm font-semibold uppercase tracking-wider text-slate-600">
+                    <li><a href="#inicio" class="hover:text-blue-700 transition">Início</a></li>
+                    <li><a href="#servicos" class="hover:text-blue-700 transition">Serviços</a></li>
+                    <li><a href="#sobre" class="hover:text-blue-700 transition">Sobre</a></li>
+                    <li><a href="#contato" class="bg-blue-700 text-white px-6 py-2 rounded shadow-md hover:bg-blue-800 transition">Fale Conosco</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <section id="inicio" class="hero-section relative overflow-hidden">
-        <div class="container mx-auto px-6 z-10">
-            <h1 class="text-4xl md:text-6xl font-bold mb-6 gradient-text">CONECTANDO TECNOLOGIA <br>E REGULAMENTAÇÃO.</h1>
-            <p class="text-lg md:text-xl text-gray-400 max-w-2xl mb-8 leading-relaxed">
-                Projetos de infraestrutura TIC e consultoria especializada para outorgas Anatel (SCM, STFC, SeAC). 
-                Expertise técnica com acesso pleno aos sistemas <strong>Mosaico e SEI</strong>.
-            </p>
-            <div class="flex flex-col sm:flex-row gap-4">
-                <a href="#servicos" class="px-8 py-4 bg-white text-black font-bold uppercase tracking-tighter hover:bg-cyan-400 transition text-center">Nossos Serviços</a>
-                <a href="https://wa.me/5568981145306" target="_blank" class="px-8 py-4 border border-white/30 font-bold uppercase tracking-tighter hover:bg-white/10 transition text-center">WhatsApp Consultoria</a>
+    <section id="inicio" class="pt-40 pb-24 bg-slate-50 border-b border-slate-100">
+        <div class="container mx-auto px-6 grid lg:grid-cols-2 gap-12 items-center">
+            <div>
+                <h1 class="text-4xl lg:text-6xl font-extrabold text-slate-900 mb-6 leading-tight">
+                    Conecte seu negócio ao futuro com a ACPTelecom
+                </h1>
+                <p class="text-xl text-slate-600 mb-8 leading-relaxed italic font-light">
+                    "Tecnologia com resultados" — Soluções integradas em engenharia de telecomunicações para otimizar sua comunicação corporativa.
+                </p>
+                <div class="flex gap-4">
+                    <a href="#servicos" class="bg-blue-700 text-white px-8 py-4 rounded font-bold shadow-lg hover:bg-blue-800 transition">Nossos Serviços</a>
+                    <a href="https://wa.me/5568981145306" target="_blank" class="border border-slate-300 px-8 py-4 rounded font-bold hover:bg-white transition">Consultoria WhatsApp</a>
+                </div>
+            </div>
+            <div class="hidden lg:block h-96 rounded-3xl overflow-hidden shadow-2xl border-8 border-white">
+                <img src="assets/banner-hero.jpg" alt="Infraestrutura de Telecom" class="object-cover w-full h-full">
             </div>
         </div>
     </section>
 
-    <section id="servicos" class="py-24 bg-[#0a0a0a]">
+    <section id="servicos" class="py-24 bg-white">
         <div class="container mx-auto px-6 text-center">
-            <h2 class="text-3xl font-bold mb-4 tracking-widest uppercase">Soluções de Engenharia</h2>
-            <div class="w-24 h-1 bg-cyan-600 mx-auto mb-16"></div>
+            <h2 class="text-3xl font-bold text-slate-900 mb-4 uppercase tracking-widest">Soluções Especializadas</h2>
+            <div class="w-20 h-1 bg-blue-700 mx-auto mb-16"></div>
             
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-left">
-                <div class="glass-card p-8 rounded-lg border border-white/5 hover:border-cyan-500/50 transition">
-                    <div class="text-cyan-400 mb-6 text-4xl">📡</div>
-                    <h3 class="text-xl font-bold mb-4">Infraestrutura e TIC</h3>
-                    <p class="text-gray-400 text-sm leading-relaxed">
-                        Projetos de redes ópticas (FTTH), cabeamento estruturado e infraestrutura técnica para operadoras e ISPs.
-                    </p>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 text-left">
+                <div class="p-8 bg-slate-50 rounded-2xl border border-slate-200 hover:shadow-xl transition transform hover:-translate-y-2">
+                    <div class="text-4xl mb-4">📡</div>
+                    <h3 class="font-bold text-lg mb-3">Consultoria e Projetos de Telecomunicações</h3>
+                    <p class="text-slate-600 text-sm leading-relaxed">Planejamento, dimensionamento e implementação de infraestrutura de rede, sistemas ópticos e radiofrequência.</p>
                 </div>
 
-                <div class="glass-card p-8 rounded-lg border border-white/5 hover:border-cyan-500/50 transition">
-                    <div class="text-cyan-400 mb-6 text-4xl">⚖️</div>
-                    <h3 class="text-xl font-bold mb-4">Outorgas e Pós-Outorga</h3>
-                    <p class="text-gray-400 text-sm leading-relaxed">
-                        Licenciamento SCM, STFC e SeAC. Gestão de obrigações regulatórias e envio de coletas de dados via sistema Mosaico.
-                    </p>
+                <div class="p-8 bg-slate-50 rounded-2xl border border-slate-200 hover:shadow-xl transition transform hover:-translate-y-2">
+                    <div class="text-4xl mb-4">🖥️</div>
+                    <h3 class="font-bold text-lg mb-3">Soluções em TIC</h3>
+                    <p class="text-slate-600 text-sm leading-relaxed">Gestão de Tecnologia da Informação e Comunicação para aumento de performance e redução de gargalos tecnológicos.</p>
                 </div>
 
-                <div class="glass-card p-8 rounded-lg border border-white/5 hover:border-cyan-500/50 transition">
-                    <div class="text-cyan-400 mb-6 text-4xl">🚁</div>
-                    <h3 class="text-xl font-bold mb-4">RF e Drones</h3>
-                    <p class="text-gray-400 text-sm leading-relaxed">
-                        Homologação de drones e equipamentos de radiofrequência na Anatel. Projetos técnicos com responsabilidade de Engenheiro Especialista.
-                    </p>
+                <div class="p-8 bg-slate-50 rounded-2xl border border-slate-200 hover:shadow-xl transition transform hover:-translate-y-2">
+                    <div class="text-4xl mb-4">⚖️</div>
+                    <h3 class="font-bold text-lg mb-3">Consultoria e Outorgas da Anatel</h3>
+                    <p class="text-slate-600 text-sm leading-relaxed">Processos completos para SCM, STFC e SeAC. Gestão regulatória especializada via sistemas Mosaico e SEI.</p>
+                </div>
+
+                <div class="p-8 bg-slate-50 rounded-2xl border border-slate-200 hover:shadow-xl transition transform hover:-translate-y-2">
+                    <div class="text-4xl mb-4">🛡️</div>
+                    <h3 class="font-bold text-lg mb-3">Servidores de Monitoramento e Segurança</h3>
+                    <p class="text-slate-600 text-sm leading-relaxed">Implementação e configuração de servidores robustos para segurança eletrônica e vigilância de tráfego de rede.</p>
+                </div>
+
+                <div class="p-8 bg-slate-50 rounded-2xl border border-slate-200 hover:shadow-xl transition transform hover:-translate-y-2 lg:col-span-2 lg:flex lg:items-center">
+                    <div class="text-4xl mb-4 lg:mb-0 lg:mr-6">🚁</div>
+                    <div>
+                        <h3 class="font-bold text-lg mb-3">Homologação de Drones na Anatel</h3>
+                        <p class="text-slate-600 text-sm leading-relaxed">Certificação técnica de equipamentos RPA (Drones) para operação profissional legal em território nacional.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="sobre" class="py-24 bg-zinc-950">
-        <div class="container mx-auto px-6 flex flex-col md:flex-row items-center gap-12">
-            <div class="md:w-1/2">
-                <h2 class="text-3xl font-bold mb-6">ALAN QUEIROZ DA SILVA</h2>
-                <p class="text-gray-400 mb-4 text-lg">
-                    Engenheiro de Telecomunicações registrado no <strong>CREA/PA: 14.414 – D</strong>. 
-                </p>
-                <p class="text-gray-400 mb-6 leading-relaxed">
-                    Com 19 anos de experiência, atuo na interface entre a engenharia de infraestrutura e o complexo cenário regulatório brasileiro, garantindo segurança jurídica para o seu negócio de telecomunicações.
-                </p>
-                <a href="http://lattes.cnpq.br/7450522116006863" target="_blank" class="inline-block border border-cyan-500 text-cyan-500 px-6 py-2 hover:bg-cyan-500 hover:text-white transition uppercase font-bold text-xs tracking-widest">Currículo Lattes</a>
-            </div>
-            <div class="md:w-1/2 grid grid-cols-2 gap-4">
-                <div class="bg-black/40 p-10 rounded-lg text-center border border-white/5">
-                    <div class="text-4xl font-bold text-white mb-2">19+</div>
-                    <div class="text-[10px] uppercase text-gray-500 tracking-widest">Anos de Experiência</div>
+    <section id="sobre" class="py-24 bg-slate-50">
+        <div class="container mx-auto px-6 max-w-5xl">
+            <div class="flex flex-col md:flex-row gap-12 items-center">
+                <div class="md:w-1/3">
+                    <div class="bg-white p-4 rounded-3xl shadow-xl border border-slate-200">
+                        <div class="w-full h-80 bg-slate-200 rounded-2xl overflow-hidden grayscale hover:grayscale-0 transition duration-500">
+                             <img src="assets/alan-queiroz.jpg" alt="Alan Queiroz" class="object-cover w-full h-full">
+                        </div>
+                    </div>
                 </div>
-                <div class="bg-black/40 p-10 rounded-lg text-center border border-white/5">
-                    <div class="text-4xl font-bold text-white mb-2">SEI</div>
-                    <div class="text-[10px] uppercase text-gray-500 tracking-widest">Acesso Anatel</div>
+                <div class="md:w-2/3">
+                    <h2 class="text-3xl font-bold text-slate-900 mb-2">Engº Alan Queiroz da Silva</h2>
+                    <p class="text-blue-700 font-bold mb-6 text-sm">CREA/PA: 14.414 – D | 19 Anos de Experiência</p>
+                    <p class="text-slate-600 mb-6 leading-relaxed">
+                        Graduado em Engenharia de Telecomunicações (IESAM-PA) com especializações em Segurança da Informação e Sistemas de Telecomunicações. Especialista Executivo no Governo do Acre, atuando na gestão de anéis ópticos metropolitanos e infraestrutura TIC corporativa.
+                    </p>
+                    <div class="flex gap-4">
+                        <a href="http://lattes.cnpq.br/7450522116006863" target="_blank" class="bg-slate-900 text-white px-6 py-2 rounded text-xs font-bold hover:bg-blue-700 transition">Currículo Lattes</a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer id="contato" class="py-12 bg-black border-t border-white/5 text-center">
-        <img src="assets/logo-acp.png" alt="ACPTelecom" class="h-8 mx-auto mb-6 opacity-60">
-        <p class="text-gray-500 text-sm mb-4">alanqsilva@gmail.com | (68) 98114-5306</p>
-        <p class="text-[10px] text-gray-700 uppercase tracking-widest">© 2026 ACPTelecom Consultoria e Projetos de Telecomunicações. Rio Branco - AC.</p>
+    <section id="contato" class="py-24 bg-slate-900 text-white">
+        <div class="container mx-auto px-6 grid lg:grid-cols-2 gap-16">
+            <div>
+                <h2 class="text-3xl font-bold mb-8 italic">Onde Estamos</h2>
+                <div class="space-y-6 text-slate-400 text-sm mb-10">
+                    <p class="flex items-center gap-3">📍 Rua Tiradentes, 158, Vilage Tiradentes, Rio Branco - AC</p>
+                    <p class="flex items-center gap-3">📞 (68) 98114-5306</p>
+                    <p class="flex items-center gap-3">✉️ alanqsilva@gmail.com</p>
+                </div>
+                <div class="h-80 rounded-2xl overflow-hidden border-4 border-white/10 shadow-2xl">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.986884610116!2d-67.83416472403713!3d-9.93504889016734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x917f0f6396e95b07%3A0xb14d88e4016a2455!2sR.%20Tiradentes%2C%20158%20-%20Vilage%20Tiradentes%2C%20Rio%20Branco%20-%20AC%2C%2069914-090!5e0!3m2!1spt-BR!2sbr!4v1715000000000!5m2!1spt-BR!2sbr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+            </div>
+            <div class="bg-white p-10 rounded-3xl shadow-2xl text-slate-800 flex flex-col justify-center">
+                <h3 class="text-2xl font-bold mb-6">Solicite Orçamento</h3>
+                <form action="https://formspree.io/f/alanqsilva@gmail.com" method="POST" class="space-y-4">
+                    <input type="text" name="name" placeholder="Nome Completo" class="w-full p-4 bg-slate-100 rounded-xl outline-none focus:ring-2 focus:ring-blue-600 transition" required>
+                    <input type="email" name="email" placeholder="E-mail" class="w-full p-4 bg-slate-100 rounded-xl outline-none focus:ring-2 focus:ring-blue-600 transition" required>
+                    <textarea name="message" placeholder="Descreva seu projeto..." rows="4" class="w-full p-4 bg-slate-100 rounded-xl outline-none focus:ring-2 focus:ring-blue-600 transition" required></textarea>
+                    <button type="submit" class="w-full bg-blue-700 text-white py-4 font-bold rounded-xl hover:bg-blue-800 transition shadow-xl">Enviar Solicitação</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <footer class="bg-slate-950 py-10 text-center text-slate-600 text-[10px] uppercase tracking-widest">
+        <p>© 2026 ACPTelecom Engenharia. Rio Branco - AC.</p>
     </footer>
 
 </body>
