--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="hidden lg:block h-96 rounded-3xl overflow-hidden shadow-2xl border-8 border-white">
-                <img src="assets/banner-hero.jpg" alt="Infraestrutura de Telecom" class="object-cover w-full h-full">
+                <img src="assets/banner-hero.png" alt="Infraestrutura de Telecom" class="object-cover w-full h-full">
             </div>
         </div>
     </section>
