--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>ACPTelecom | Engenheiro Alan Queiroz | Rio Branco - AC</title>
-    <meta name="description" content="Engenheiro de Telecomunicações Alan Queiroz da Silva (CREA/PA). Projetos de Redes Ópticas, Wireless, VoIP, Outorgas Anatel e Homologação de Drones em Rio Branco, Acre.">
+    <title>ACPTelecom | Engenheiro Alan Queiroz | Consultoria e Projetos</title>
+    <meta name="description" content="Engenharia de Telecomunicações em Rio Branco-AC. Especialista em Outorgas Anatel, Projetos de Fibra Óptica e Homologação de Drones. Eng. Alan Queiroz da Silva CREA/PA.">
     <meta name="keywords" content="Engenheiro Telecomunicações Rio Branco, ACPTelecom, Alan Queiroz da Silva, Projetos de Rede Óptica, Consultoria Anatel Acre, Outorga SCM, Homologação de Drones, SCM Anatel">
     <link rel="canonical" href="https://www.acptelecom.eng.br/">
 
