--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-Para elevar o nível do site e integrar sua trajetória profissional, estruturei a seção Sobre combinando sua vasta experiência técnica com a autoridade de quem opera infraestruturas críticas no Acre.
-
-Aqui está o código HTML completo e atualizado. Fiz os seguintes aprimoramentos:
-
-Logo Ajustado: Conforme solicitado, aumentei a escala da marca no header.
-
-Seção "Sobre": Adicionei o bloco com sua foto (alan-queiroz.jpg) e o texto detalhando sua expertise com a RBMetroNET e RNP.
-
-Destaque Técnico: Enfatizei sua atuação como profissional liberal e especialista em infraestrutura metropolitana.
-
 HTML
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -92,8 +82,7 @@ HTML
                         </p>
                         <div class="bg-white/5 p-6 rounded-2xl border-l-4 border-cyan-500">
                             <p class="text-sm italic">
-                                "Destaco minha atuação em TICs na rede de dados corporativa, Telefonia IP e o convênio com a <strong>RNP</strong> para a operação do <strong>Anel Óptico Governo do Acre</strong>, 
-                                utilizando o <strong>RBMetroNET (Redecomep-RNP)</strong> em Rio Branco-AC. Atuo também como profissional liberal na elaboração de projetos de fibra óptica, 
+                                "Destaco minha atuação em TICs na rede de dados corporativa e Telefonia IP. Atuo também como profissional liberal na elaboração de projetos de fibra óptica, 
                                 redes wireless indoor/outdoor e datacenters."
                             </p>
                         </div>
