--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </section>
 
     <footer class="py-12 text-center text-slate-500 text-[10px] tracking-[0.3em] uppercase">
-        © 2026 ACPTELECOM • ENGENHARIA E CONSULTORIA • RIO BRANCO - AC
+        © 2026 ACPTELECOM • ALAN CONSULTORIA E PROJETOS DE TELECOMUNICAÇÕES • RIO BRANCO - AC
     </footer>
 
 </body>
