Update meta description for telecom services

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACPTelecom | Engenharia de Alta Performance</title>
     
-    <meta name="description" content="Engenharia de Telecomunicações em Rio Branco-AC. Especialista em Outorgas Anatel, Projetos de Fibra Óptica e Infraestrutura de TICs.">
+    <meta name="description" content="Engenharia de Telecomunicações em Rio Branco-AC. Especialista em Outorgas Anatel, Projetos de Telecomunicações e Infraestrutura de TICs.">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap" rel="stylesheet">
