Update professional description in index.html

--- a/index.html
+++ b/index.html
@@ -81,9 +81,11 @@
                         </p>
                         <div class="bg-white/5 p-6 rounded-2xl border-l-4 border-cyan-500">
                             <p class="text-sm italic">
-                                "Destaco minha atuação em TICs na rede de dados corporativa, Telefonia IP e o convênio com a <strong>RNP</strong> para a operação do <strong>Anel Óptico Governo do Acre</strong>, 
-                                utilizando o <strong>RBMetroNET (Redecomep-RNP)</strong> em Rio Branco-AC. Atuo também como profissional liberal na elaboração de projetos de fibra óptica, 
-                                redes wireless indoor/outdoor e datacenters."
+    "Engenheiro de Telecomunicações com sólida experiência no setor público, especializado na 
+    elaboração de <strong>especificações técnicas</strong> e <strong>projetos de infraestrutura de TIC</strong>. 
+    Possuo expertise no desenvolvimento de redes de dados ópticas, sistemas de <strong>Telefonia IP (Voice over IP)</strong> 
+    e análise de pareceres técnicos estruturados em processos eletrônicos. Atuo também como profissional 
+    liberal no projeto de redes de fibra óptica, soluções wireless e infraestrutura para <strong>Datacenters</strong>."
                             </p>
                         </div>
                     </div>
