Update telecom engineer description in index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </p>
                         <div class="bg-white/5 p-6 rounded-2xl border-l-4 border-cyan-500">
                             <p class="text-sm italic">
-    "Engenheiro de Telecomunicações com sólida experiência no setor público, especializado na 
+    "Destaco minha sólida experiência no setor público, especializado na 
     elaboração de <strong>especificações técnicas</strong> e <strong>projetos de infraestrutura de TIC</strong>. 
     Possuo expertise no desenvolvimento de redes de dados ópticas, sistemas de <strong>Telefonia IP (Voice over IP)</strong> 
     e análise de pareceres técnicos estruturados em processos eletrônicos. Atuo também como profissional 
